--- a/src/app/game/win95.css
+++ b/src/app/game/win95.css
@@ -97,6 +97,12 @@
     flex-shrink: 0;
 }
 
+.win95-dialog-icon-lose {
+    width: 48px;
+    height: 48px;
+    flex-shrink: 0;
+}
+
 .win95-dialog-icon.error {
     color: #ff0000;
 }
